fix(wlogout): Adjust alignment of wlogout buttons

--- a/wlogout/style.css
+++ b/wlogout/style.css
@@ -12,10 +12,14 @@ button {
     background-color: #363A4F;
     color: #CAD3F5;
 
+    font-size: 24;
     font-weight: bold;
     text-shadow: none;
 
     border-radius: 15;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-left: 10px;
     margin-right: 10px;
 
     background-repeat: no-repeat;
